<resources>
    <string name="app_name">ProyectoFinalMóvilesTEAM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_regprodvend">Registro Producto</string>
    <string name="menu_listprodvend">Listado Producto</string>



    <string name="login_to_yo">
Iniciar sesión

</string>
    <string name="email">
        Email
    </string>
    <string name="register">
    Registrate
    </string>
    <string name="password">
    Password
    </string>
    <string name="login">
    Iniciar
    </string>
    <string name="forgot_your">
    Olvidaste tu contraseña?
    </string>
    <string name="don_t_have_">
    No tienes una cuenta?
    </string>
    <string name="sing_up">
    Registrate
     </string>
    <string name="By_selecting_you_agree_to_the_following">
    By_selecting_you_agree_to_the_following
    </string>
    <string name="direc_ini">Jirón Alonso de Molina 1652</string>
    <string name="busca_ini">  ¿Con hambre? Píde algo!</string>
    <string name="direc_usu">Direcciones</string>
    <string name="Terms_and_conditions">
    Terms_and_conditions
    </string>

    <string name="Usuarios">
    Usuarios
    </string>
    <string name="Restaurantes">
    Restaurantes
    </string>
    <string name="Tiendas">
    Tiendas
    </string>
    <string name="Pedidos">
    Pedidos
    </string>
    <string name="Menu_principal_ADM">
    Menu_principal_ADM
    </string>
    <string name="Estadisticas_General">
    Estadisticas General
    </string>
    <string name="Repartidores">
    Repartidores
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Ubic">Escriba su ubicacion</string>
    <string name="title_activity_principal_vendedor">PrincipalVendedorActivity</string>
</resources>